log
Sun 16 Oct 2022 12:22:41 AM UTC: 
 tests:  0|4
total_score: 0/70
1eaf19d
Sun 16 Oct 2022 12:26:50 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
99485f4
Sun 16 Oct 2022 05:45:05 PM UTC: 
 tests:  1|3
total_score: 10/70
e02fa05
Sun 16 Oct 2022 05:45:40 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
1bf8f5b
Sun 16 Oct 2022 05:48:49 PM UTC: 
 heap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
8fff6fa
Sun 16 Oct 2022 05:51:57 PM UTC: 
 heap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:52:81: error: expected expression before ‘>’ token
   52 |   while((2*aux+2) <= pq->capac && (pq->heapArray[2*aux+1].priority > pq-        >heapArray[aux].priority ||pq->heapArray[2*aux+2].priority > pq->heapArray[aux].priority)){
      |                                                                                 ^
Compilation failed
e47580f
